# 3d-python-2025

./: .gitignore  README.md  build_exe.py  build_exe.sh  build_win.sh  pyproject.toml  setup.cfg  setup.py  setup_freeze.py
3d-python-media/example_configs/: alarm_config.json  fire_config.json  ui_config.json
3d-python-media/maps/cache/cached_map_4550_3400_600_300_300/: cached_map_4550_3400_600_300_300.bytes  cached_map_4550_3400_600_300_300.tif  meta.txt
3d-python-media/models/: all_zrk.scad  all_zrk.stl  p-18-small.stl  s-300-small.stl
3d-python-media/models/planes/: 27.stl  33.stl
config_annotation/: alarm_config.json  control_config.json  dron_config.json  fire_config.json
mountain3d/: __main__.py  app.py  const.py  graphics.py  map_generator.py  math.py  utils.py
notebook/: clear.ipynb
utils/: map_downloader.py  map_preparation.py
